@@ -12,6 +12,10 @@ What's New in Python 2.5 alpha 1?
 Core and builtins
 -----------------
 
+- All iterators now have a Boolean value of true.  Formerly, some iterators
+  supported a __len__() method which evaluated to False when the iterator
+  was empty.
+
 - On 64-bit platforms, when __len__() returns a value that cannot be
   represented as a C int, raise OverflowError.
 
